iter_language/tests/corpus/valid/apply-back-asymmetric-filter.iter
queue memory

workspace sandbox {
  base = "./worktree"
  excludes = [".git"]
  preserve_mtime = false

  apply_back {
    mode = sync
    excludes = ["*.md", ".git"]
    includes = ["README.md"]
  }

  policy {
    network = off
  }
}

agent claude {
  mode = print
  command = "claude"
}

runner {
  agent = claude
  workspace = sandbox
  queue = memory
  continue_on_error = true
  behavior = wait
  prompt = "iterate"
}
