iter_language/tests/corpus/invalid/runner-iteration-timeout-zero.iter
queue memory

workspace clone {
  base = "."
  excludes = []
  preserve_mtime = true
  apply_back { mode = sync }}

agent claude {
  mode = print
  command = "claude"
}

runner {
  continue_on_error = true
  behavior = wait
  iteration_timeout_secs = 0
}

prompt "iterate"
